--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   background-color: red;
   width:100vw;
   height:100vh;
+  overflow: hidden;
 }
 
 .arrowleft{
@@ -34,7 +35,7 @@
 .circle{
   display: flex;
   justify-content: space-between;
-  width: 170px;
+  width: 100px;
   position: absolute;
   bottom: 50px;
   left: 46%;
@@ -52,8 +53,8 @@
 }
 
 .restimage{
-  height: 400px;
-  width: 400px;
+  height: 250px;
+  width: 250px;
   border-radius: 50%;
   background-color: antiquewhite;
   position: absolute;
@@ -62,8 +63,8 @@
 }
 
 .indicator{
-  width: 50px;
-  height: 50px;
+  width: 20px;
+  height: 20px;
   background-color: white;
   border-radius:50%;
 }
