refactored components placement

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
 
 
 .homepage{
+  display: flex;
+  justify-content: center;
   position: relative;
   background-color: red;
   width:100vw;
@@ -12,12 +14,14 @@
 }
 
 .arrowleft{
+  margin-left: 10px;
   position: absolute;
   left: 0;
   top:50%;
 }
 
 .arrowright{
+  margin-right: 10px;
   position:absolute;
   right: 0;
   top:50%;
@@ -27,9 +31,9 @@
 .homename{
   font-size:70px;
   background-color: aqua;
+  margin: auto 0;
   position: absolute;
-  left:46%;
-  top:20px;
+  top: 20px;
 }
 
 .circle{
@@ -47,19 +51,20 @@
   height:fit-content;
   background-color: azure;
   position: absolute;
-  bottom: 200px;
+  bottom: 15%;
   right: 120px;
 
 }
 
 .restimage{
+  overflow: hidden;
   height: 250px;
   width: 250px;
   border-radius: 50%;
   background-color: antiquewhite;
   position: absolute;
   left: 40vw;
-  top: 20vh;
+  top: 25%;
 }
 
 .indicator{
