--- a/src/App.css
+++ b/src/App.css
@@ -73,3 +73,71 @@
   background-color: white;
   border-radius:50%;
 }
+.menu{
+  display: flex;
+  justify-content: space-evenly;
+  width: 95vw;
+  height: 95vh;
+  background-color: aqua;
+}
+.leftSection{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 65%;
+  height: 100%;
+  background-color: bisque;
+}
+.imagedetswrapper{
+  display: flex;
+  justify-content: space-evenly;
+  height: 40%;
+  width: 80%;
+  background-color: blanchedalmond;
+}
+.dishImage{
+  border-radius: 50%;
+  height: 250px;
+  width: 250px;
+  background-color: cyan;
+}
+.foodDets{
+  width: 50%;
+  height: 100%;
+  background-color: yellow;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.foodName{
+  font-size: 3rem;
+}
+.Menudisplay{
+  position: relative;
+  height: 30%;
+  width: 90%;
+  background-color: red;
+  display: flex;
+  justify-content: space-evenly;
+}
+.filters{
+  width: 70%;
+  height: 10%;
+  background-color: burlywood;
+  display: flex;
+}
+.rightSection{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30%;
+  height: 100%;
+  background-color: green;
+}
+.overview{
+  width: 90%;
+  height: 80%;
+  border-radius: 25px;
+  background-color: black;
+}
