--- a/src/App.css
+++ b/src/App.css
@@ -127,6 +127,7 @@
   justify-content: space-evenly;
 }
 .rightSection{
+  /* position: relative; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -134,6 +135,7 @@
   height: 100%;
 }
 .overview{
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -184,4 +186,90 @@
 }
 .landingBackground{
   filter: blur(4px);
+}
+.orderCardWrapper{
+  height: 100px;
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.orderTab{
+  display: flex;
+  position: relative;
+}
+.ordersIndicator{
+  position: absolute;
+  display: none;
+  top: -30px;
+  right: -10px;
+  font-weight: bolder;
+  font-size: 35px;
+  color: blue;
+}
+.orderDataWrapper{
+  text-overflow: ellipsis;
+  width: 60%;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.orderImage{
+  background-color: blue;
+  width: 45px;
+  height: 60px;
+  border-radius: 50px;
+  margin-right: 10px;
+}
+.RemoveOrder{
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: red;
+}
+.orderData{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: fit-content;
+}
+.orderName{
+  font-weight: bold;
+}
+.buttonReserve{
+  position: absolute;
+  bottom: 20px;
+}
+.infoWrapper{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 90%;
+  height: 70%;
+}
+.ratings{
+  position: relative;
+  background-color: yellow;
+  border-radius: 10px;
+  height: 100px;
+  width: 80px;
+}
+.ratingNum{
+  position: absolute;
+  right: -35px;
+  font-weight: bolder;
+  font-size: 4rem;
+}
+.infoName{
+  font-weight: bolder;
+  font-size: 1.5rem;
+  font-style: italic;
+}
+.menuSlideControlsleft, .menuSlideControlsright{
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: bisque;
 }
