--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,7 @@
   justify-content: space-evenly;
   width: 95vw;
   height: 95vh;
+  position: relative;
 }
 .leftSection{
   display: flex;
@@ -272,4 +273,10 @@
   height: 35px;
   border-radius: 50%;
   background-color: bisque;
+}
+
+.photo{
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
