--- a/src/App.css
+++ b/src/App.css
@@ -130,6 +130,7 @@
 .rightSection{
   /* position: relative; */
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 30%;
@@ -330,4 +331,7 @@ button{
   justify-content: space-evenly;
   align-items: center;
   bottom: 0;
+}
+.searchWrapper{
+  width: 60%;
 }
