--- a/src/App.css
+++ b/src/App.css
@@ -76,9 +76,12 @@
 .menu{
   display: flex;
   justify-content: space-evenly;
-  width: 95vw;
-  height: 95vh;
+  width: 100vw;
+  height: 100vh;
   position: relative;
+  background-color: #8EC5FC;
+  background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+
 }
 .leftSection{
   display: flex;
@@ -122,7 +125,7 @@
 .filters{
   width: 70%;
   height: 10%;
-  background-color: burlywood;
+  background-color:aliceblue;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -145,7 +148,7 @@
   width: 90%;
   height: 80%;
   border-radius: 25px;
-  background-color: aliceblue;
+  background-image: linear-gradient( 135deg, #FFF5C3 10%, #9452A5 100%);
 }
 .menuSlideControlsleft{
   position: absolute;
@@ -158,7 +161,8 @@
   right: 10px;
 }
 .itemCard{
-  background-color: azure;
+  background-color: #FFDEE9;
+  background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
   height: 90%;
   width: 20%;
   border-radius: 20px;
@@ -232,6 +236,9 @@
   height: 35px;
   border-radius: 50%;
   background-color: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .orderData{
   display: flex;
@@ -245,6 +252,7 @@
 .buttonReserve{
   position: absolute;
   bottom: 20px;
+  left: 50%;
 }
 .infoWrapper{
   display: flex;
@@ -290,11 +298,14 @@ button{
   font-weight: bolder;
 }
 .LockScreen{
-  height: 95vh;
-  width: 95vw;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #FAACA8;
+  background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
+
 }
 .LockCenter{
   overflow-y: auto;
